tests/transpiler/x/java/len_builtin.error
exit status 1
Main.java:3: error: cannot find symbol
        System.out.println(new int[]{1, 2, 3}.length());
                                             ^
  symbol:   method length()
  location: class int[]
1 error
